--- a/event.html
+++ b/event.html
@@ -41,17 +41,15 @@
           </div>
         </div>
       </section>
-      <section class="sec-1-event">
+      <section class="sec-1-event py-4">
         <div class="event-box container">
           <p class="black-text-30 p-5 text-center">
             Exquisite Delights Our Captivating
             <span class="orane-text-30">Event</span> Menu
           </p>
-          <div class="event-subs row">
-            <div
-              class="events-mini-box d-flex flex-wrap justify-content-between"
-            >
-              <div class="card mb-4" style="min-width: 540px">
+          <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
@@ -72,7 +70,9 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-4" style="min-width: 540px">
+            </div>
+            <div class="col">
+              <div class="">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
@@ -93,7 +93,9 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-4" style="min-width: 540px">
+            </div>
+            <div class="col">
+              <div class="">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
@@ -114,7 +116,9 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-4" style="min-width: 540px">
+            </div>
+            <div class="col">
+              <div class="">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
@@ -135,7 +139,9 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-4" style="min-width: 540px">
+            </div>
+            <div class="col">
+              <div class="">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
@@ -156,7 +162,9 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-4" style="min-width: 540px">
+            </div>
+            <div class="col">
+              <div class="">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
@@ -179,6 +187,7 @@
               </div>
             </div>
           </div>
+          <div class="event-subs row"></div>
         </div>
       </section>
       <section class="section-5 sec-4-prac">
