--- a/PracticeArea.html
+++ b/PracticeArea.html
@@ -112,68 +112,87 @@
         </div>
       </section>
       <section class="container sec-5-prac">
-        <div class="def-info row d-flex">
-          <div class="def-sub1 col-5">
-            <p class="def-lines bod-top m-0">Insurance Defense</p>
-            <p class="def-lines m-0">Medical Malpractice Defense</p>
-            <p class="def-lines m-0">Products Liability Defense</p>
-            <p class="def-lines m-0">Motor Vehicle Accident Defense</p>
-            <p class="def-lines m-0">First Party Insurance Claims</p>
-          </div>
-          <div class="def-sub2 col-7 d-flex justify-content-end p-0">
-            <div class="right-img image-fit position-relative">
-              <div class="low-sub position-absolute">
-                <p class="text-center px-3">
-                  "Law is the expression of the will of the society, the will
-                  that is just and stable." - Woodrow Wilson
-                </p>
+        <div class="py-5">
+          <div class="def-info row d-flex">
+            <div class="def-sub1 col-5">
+              <p class="def-lines bod-top m-0">Insurance Defense</p>
+              <p class="def-lines m-0">Medical Malpractice Defense</p>
+              <p class="def-lines m-0">Products Liability Defense</p>
+              <p class="def-lines m-0">Motor Vehicle Accident Defense</p>
+              <p class="def-lines m-0">First Party Insurance Claims</p>
+            </div>
+            <div class="def-sub2 col-7 d-flex justify-content-end p-0">
+              <div class="right-img image-fit position-relative">
+                <div class="low-sub position-absolute">
+                  <p class="text-center px-3">
+                    "Law is the expression of the will of the society, the will
+                    that is just and stable." - Woodrow Wilson
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="container-fluid last-con mb-5">
+      <section class="container-fluid last-con py-5">
         <div class="firm-dv container">
-          <p class="black-text-30 text-center firm-text">
+          <p class="black-text-30 text-center firm-text m-0">
             <span class="orane-text-30">Choose</span> what you prefer in our
             Firm.
           </p>
           <div class="lw-cards">
             <div class="card-group main-card-sub">
-              <div class="card">
-                <div class="card-body card-b">
-                  <p class="card-inn">Experienced Court Perform</p>
-                  <p class="mid-line"></p>
-                  <p class="lw-txt">
-                    find out more
-                    <span class="ms-2"
-                      ><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                    </span>
-                  </p>
+              <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 py-5">
+                <div class="col">
+                  <div class="card">
+                    <div class="card-body card-b">
+                      <p class="card-inn">Experienced Court Perform</p>
+                      <p class="mid-line"></p>
+                      <p class="lw-txt">
+                        find out more
+                        <span class="ms-2"
+                          ><i
+                            class="fa fa-long-arrow-right"
+                            aria-hidden="true"
+                          ></i>
+                        </span>
+                      </p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="card-body card-b">
-                  <p class="card-inn">We Provide Solid Law Practice</p>
-                  <p class="mid-line"></p>
-                  <p class="lw-txt">
-                    find out more
-                    <span class="ms-2"
-                      ><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                    </span>
-                  </p>
+                <div class="col">
+                  <div class="card">
+                    <div class="card-body card-b">
+                      <p class="card-inn">Experienced Court Perform</p>
+                      <p class="mid-line"></p>
+                      <p class="lw-txt">
+                        find out more
+                        <span class="ms-2"
+                          ><i
+                            class="fa fa-long-arrow-right"
+                            aria-hidden="true"
+                          ></i>
+                        </span>
+                      </p>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="card-body card-b">
-                  <p class="card-inn">Experienced Court Perform</p>
-                  <p class="mid-line"></p>
-                  <p class="lw-txt">
-                    find out more
-                    <span class="ms-2"
-                      ><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                    </span>
-                  </p>
+                <div class="col">
+                  <div class="card">
+                    <div class="card-body card-b">
+                      <p class="card-inn">Experienced Court Perform</p>
+                      <p class="mid-line"></p>
+                      <p class="lw-txt">
+                        find out more
+                        <span class="ms-2"
+                          ><i
+                            class="fa fa-long-arrow-right"
+                            aria-hidden="true"
+                          ></i>
+                        </span>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
